@@ -351,8 +351,10 @@ foreach $f (@feature_plugins) {
 	next if ($aliasdom && !$aliasdom->{$f});
 
 	$label = &plugin_call($f, "feature_label", 0);
-	push(@grid, &ui_checkbox($f, 1, "", 1)." ".
-		    "<b>$label</b>");
+	$label = "<b>$label</b>";
+	$hlink = &plugin_call($f, "feature_hlink");
+	$label = &hlink($label, $hlink, $f) if ($hlink);
+	push(@grid, &ui_checkbox($f, 1, "", 1)." ".$label);
 	}
 $ftable = &ui_grid_table(\@grid, 2, 100,
 	[ "width=30% align=left", "width=70% align=left" ]);
